# chainlink-prices

./: README.md  pyproject.toml
ethereum/: README.md  pyproject.toml
ethereum/chainlink-eth/: chainlink_feeds.py  data_to_ck.py
ethereum/chainlink-eth/config/: addresses.cfg  decimals.cfg
ethereum/chainlink-eth/db/: clickhouse.py
ethereum/chainlink-eth/scripts/: init-develop-env.sh
ethereum/chainlink-eth/tests/: test_chainlink_feeddata.py  test_clickhouse.py  test_token_prices.py  test_web3.py
