[tool.poetry]
name = "chainlink-prices"
version = "0.1.0"
description = ""
authors = ["Hello2021Year <78727568+Hello2021Year@users.noreply.github.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.4.0"
web3 = "^6.5.0"
multiprocessing-logging = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

